--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CS4740 Cloud Computing - UVA Fall 2020</title>
+    <title>DS3002 Data Science Systems - UVA Spring 2021</title>
 
     <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/styles.css">
     <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/github-light.css">
