--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/cs4740/" style="color:black;text-decoration:none;">CS4740 Cloud Computing</a></h1>
-        <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Fall 2020</p>
+        <h1><a href="https://nmagee.github.io/cs4740/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
+        <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
         <div style="min-height:2rem;"></div>
         <ul>
           <li><a href="https://nmagee.github.io/cs4740/schedule/">Review the<strong>Schedule</strong></a></li>
