--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>DS3002 Data Science Systems - UVA Spring 2021</title>
 
-    <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/styles.css">
-    <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/github-light.css">
+    <link rel="stylesheet" href="https://nmagee.github.io/ds3002/stylesheets/styles.css">
+    <link rel="stylesheet" href="https://nmagee.github.io/ds3002/stylesheets/github-light.css">
     <link rel="Shortcut Icon" href="https://www.rc.virginia.edu/images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -16,16 +16,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/cs4740/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
+        <h1><a href="https://nmagee.github.io/ds3002/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
         <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
         <div style="min-height:2rem;"></div>
         <ul>
-          <li><a href="https://nmagee.github.io/cs4740/schedule/">Review the<strong>Schedule</strong></a></li>
-          <li><a href="https://l.uvarc.io/youtube-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="https://l.uvarc.io/discord">Discussions on <strong>Discord</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/">Review the<strong>Schedule</strong></a></li>
+          <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
+          <li><a href="">Discussions on <strong>Discord</strong></a></li>
         </ul>
       </header>
-      
+
 <section>
 
 <h2><a id="description" class="anchor" href="#description" name="description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Description</h2>
@@ -46,12 +46,12 @@
 
 <h2><a id="participation" class="anchor" href="#participation" name="participation"  aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Participation</h2>
 <div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;box-shadow: 4px 4px 5px #ccc;">
-  <h3 style="font-size:120%;">Fall 2020 - This course will be held entirely online</h3>
+  <h3 style="font-size:120%;">Spring 2021 - This course will be held entirely online</h3>
   <p>This course is being offered <strong>ONLINE SYNCHRONOUSLY</strong> in a flipped mode. Most lectures will be video streams to be watched or re-watched whenever the student chooses.
   Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 2:00-3:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
   <p>Office hours will be held online <b>Tuesdays, 2:00-4:00pm EDT</b>. Visit the <b>#office-hours</b> channel in Discord.</p>
 
-  <p><a href="schedule/" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
+  <p><a href="" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
 </div>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
@@ -127,7 +127,7 @@
   <li><strong><a href="">YouTube</a></strong> - This will be our primary platform for recorded lectures and the video portion of real-time discussions.</li>
   <li><strong><a href="https://discord.com/new/download">Discord</a></strong> - Discord will serve as our hub for discussions, Q&A, and distributing extra material specific to topics or assignments. Download the software, create a Discord account, and <strong><a href="https://l.uvarc.io/discord">join the class server</a></strong>.</li>
   <li><strong><a href="https://github.com/">Git/GitHub</a></strong> - Students are expected to know how to version control their material using Git. Some programming assignments will require submission via commits pushed to GitHub. Need a <a href="https://katacoda.com/courses/git" target="_new">tutorial</a>? If you do not have a GitHub account, create one now. Also, sign up for the <b><a href="https://education.github.com/students" target="_new">GitHub Education Student Developer Pack</a></b></li>
-  <li><strong><a href="https://nmagee.github.io/cs4740/aws/">Amazon Web Services</a></strong> - All students will use AWS accounts and credits for this course. Please click the link to learn more about the AWS Educate program and your options for creating an account. We will also be using the <strong>AWS <a href="https://aws.amazon.com/cli/">CLI</a> and <a href="https://aws.amazon.com/tools/">SDKs</a></strong> to interact with the AWS cloud programmatically. This will include the CLI interface and at least one SDK, preferably the <code>boto3</code> library for Python.</li>
+  <li><strong><a href="https://nmagee.github.io/ds3002/aws/">Amazon Web Services</a></strong> - All students will use AWS accounts and credits for this course. Please click the link to learn more about the AWS Educate program and your options for creating an account. We will also be using the <strong>AWS <a href="https://aws.amazon.com/cli/">CLI</a> and <a href="https://aws.amazon.com/tools/">SDKs</a></strong> to interact with the AWS cloud programmatically. This will include the CLI interface and at least one SDK, preferably the <code>boto3</code> library for Python.</li>
   <li><strong><a href="https://l.uvarc.io/gcp">Google Cloud Platform</a></strong> (optional) - Students also have the opportunity to work with GCP to broaden their hands-on experience. Google has donated $50 credit to each student for work in their environment.
   <li><strong><a href="https://www.docker.com/">Docker</a></strong> - You will need the Docker CE or Docker Desktop application for some portions of this course. All students should also create an account on <a href="https://hub.docker.com/">Docker Hub</a>. Students may also have practice assignments using the <strong><a href="https://training.play-with-docker.com/" target="_new">Play With Docker</a></strong> sandbox.
   <li><strong><a href="https://amazon.qwiklabs.com/">Qwiklabs</a></strong> - Provides hands-on labs in AWS services. Many of these are free and include detailed steps to complete practice projects of varying complexity.
@@ -195,6 +195,6 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
   </footer>
 </div>
-<script src="https://nmagee.github.io/cs4740/javascripts/scale.fix.js"></script>
+<script src="https://nmagee.github.io/ds3002/javascripts/scale.fix.js"></script>
 </body>
 </html>
