--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 <section>
 
 <h2><a id="description" class="anchor" href="#description" name="description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Description</h2>
-<p>This course investigates the architectural foundations of the various cloud platforms and examines both current cloud computing platforms and modern cloud research. Student assignments utilize the major cloud platforms. Prerequisite: CS 2150 with grade of C- or higher.</p>
-<p>Cloud Computing has become an everyday term, but its meaning often remains unclear. For the purposes of this course, "cloud computing" makes up a specific way of creating, managing, and interacting with remote computing infrastructure and services, so-called IaaS (Infrastructure as a Service).</p>
-<p>We will discuss the technical, business, and practical reasons that cloud computing emerged, and the ways it has evolved in the last 15 years. Attention will be paid to the ways cloud computing - by empowering users to create and use infrastructure on demand and at scale - places additional risks and requirements upon the user, such as cost, security, and operational viability.</p>
+<p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction such as SQLite and evolve to cloud base systems such as AWS or Google Cloud. This progression will include topics such as data lakes and other non-SQL applications as appropriate.</p>
 
 <ul>
   <li><a href="#participation" style="text-decoration:none;color:black;">Participation</a></li>
@@ -74,7 +72,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="https://l.uvarc.io/1fkedp81g" target="_new">Student Survey</a></td>
+      <td><a href="" target="_new">Student Survey</a></td>
       <td>1%</td>
       <td>First week of class</td>
     </tr>
@@ -99,14 +97,14 @@
       <td>5 separate projects</td>
     </tr>
     <tr>
-      <td>Mid-Term Exam - <a href="https://l.uvarc.io/mid-term-review">Review Sheet</a></td>
+      <td>Mid-Term Exam</td>
       <td>24%</td>
-      <td>Due October 9</td>
+      <td></td>
     </tr>
     <tr>
       <td>Final Exam</td>
       <td>25%</td>
-      <td>Due December 9</td>
+      <td></td>
     </tr>
   </tbody>
 </table>
