--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 </div>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
-<p>This course will emphasize hands-on experience in the creation, management, and consumption of cloud-based services. For the purposes of getting started I will assume that you fit roughly into at least one of three categories as you approach the subject:</p>
+<p>This course will emphasize hands-on experience in the creation, management, and consumption of various computational services that support the practice of data science. For the purposes of getting started I will assume that you fit roughly into at least one of three categories as you approach the subject:</p>
 <ol>
-  <li>Developer</li>
-  <li>Sysadmin / Systems Engineer</li>
   <li>Data Scientist / Researcher</li>
+  <li>Developer</li>
+  <li>Sysadmin / Engineer</li>
 </ol>
-<p>Students will learn how to create cloud resources according to best practices, with an emphasis upon creating reusable snippets of infrastructure-as-code.</p>
+<p>Students will learn how to implement data science systems according to best practices, with an emphasis upon creating reusable and portable environments.</p>
 
 <h2><a id="grading" class="anchor" href="#grading" name="grading" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Grading</h2>
 <table>
@@ -82,7 +82,7 @@
       <td>Weekly before class discussion</td>
     </tr>
     <tr>
-      <td><a href="labs/">Labs</a></td>
+      <td><a href="">Labs</a></td>
       <td></td>
       <td>Weekly before class discussion</td>
     </tr>
