Clean schedule a tiny bit

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CS4740 Cloud Computing - Schedule</title>
+    <title>DS3002 Data Science Systems - Schedule</title>
 
-    <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/styles.css">
-    <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/github-light.css">
+    <link rel="stylesheet" href="https://nmagee.github.io/ds3002/stylesheets/styles.css">
+    <link rel="stylesheet" href="https://nmagee.github.io/ds3002/stylesheets/github-light.css">
     <link rel="Shortcut Icon" href="https://www.rc.virginia.edu/images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -16,15 +16,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/cs4740/" style="color:black;text-decoration:none;">CS4740 Cloud Computing</a></h1>
+        <h1><a href="https://nmagee.github.io/ds3002/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
         <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Fall 2020</p>
 
         <div style="min-height:2rem;"></div>
 
         <ul>
-          <li><a href="https://nmagee.github.io/cs4740/">Return to the<strong>Syllabus</strong></a></li>
-          <li><a href="https://l.uvarc.io/youtube-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="https://l.uvarc.io/discord">Discussions on <strong>Discord</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/">Return to the<strong>Syllabus</strong></a></li>
+          <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
+          <li><a href="">Discussions on <strong>Discord</strong></a></li>
         </ul>
       </header>
       <section>
@@ -35,7 +35,7 @@
   <thead>
     <tr>
       <th>#</th>
-      <th style="width:15%;">Date</th>
+      <th style="width:15%;">Starts</th>
       <th>Topics(s)</th>
       <th>Lectures</th>
       <th style="width:30%;">Read / Watch / Do</th>
@@ -48,19 +48,16 @@
       <td>Student Survey</td>
       <td></td>
       <td>
-        <a href="https://l.uvarc.io/1fkedp81g" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a>
+        <a href="" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a>
       </td>
     </tr>
     <tr>
       <td>01</td>
-      <td>8/25-8/28</td>
+      <td>2/1/2021</td>
       <td>Course introduction, concepts</td>
       <td><a href="https://l.uvarc.io/youtube-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=1pBuwKwaHp0" target="_new">Cloud Computing in 2020</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=XZmGGAbHqa0" target="_new">Google Data Centers</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Facebook Rack Design</a> <br />
-        <img src="../images/book.png" /> <a href="https://en.wikipedia.org/wiki/Cloud_computing" target="_new">Cloud Computing</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">AWS Overview</a> <br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">GCP Overview</a>
       </td>
@@ -290,7 +287,7 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="https://nmagee.github.io/cs4740/javascripts/scale.fix.js"></script>
+    <script src="https://nmagee.github.io/ds3002/javascripts/scale.fix.js"></script>
     
   </body>
 </html>
