--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
         <div style="min-height:2rem;"></div>
         <ul>
-          <li><a href="https://nmagee.github.io/ds3002/">Review the<strong>Schedule</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/schedule/">Review the<strong>Schedule</strong></a></li>
           <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
           <li><a href="">Discussions on <strong>Discord</strong></a></li>
         </ul>
@@ -49,7 +49,7 @@
   Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 2:00-3:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
   <p>Office hours will be held online <b>Tuesdays, 2:00-4:00pm EDT</b>. Visit the <b>#office-hours</b> channel in Discord.</p>
 
-  <p><a href="" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
+  <p><a href="schedule/" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
 </div>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
