--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <h2><a id="participation" class="anchor" href="#participation" name="participation"  aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Participation</h2>
 <div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;box-shadow: 4px 4px 5px #ccc;">
   <h3 style="font-size:120%;">Spring 2021 - This course will be held entirely online</h3>
-  <p>This course is being offered <strong>ONLINE SYNCHRONOUSLY</strong> in a flipped mode. Most lectures will be video streams to be watched or re-watched whenever the student chooses.
-  Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 2:00-3:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
-  <p>Office hours will be held online <b>Tuesdays, 2:00-4:00pm EDT</b>. Visit the <b>#office-hours</b> channel in Discord.</p>
+  <p>This course is being offered <strong>ONLINE SYNCHRONOUSLY</strong>. Most lectures will be video streams to be watched whenever the student chooses.
+  Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 11:00am-12:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
+  <p>No formal Office hours will be held weekly. Instead, drop your question in the <b>#office-hours</b> channel in Discord or DM a TA or Instructor to set up a time to chat.</p>
 
   <p><a href="schedule/" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
 </div>
