Basic first page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
         <div style="min-height:2rem;"></div>
         <ul>
-          <li><a href="https://nmagee.github.io/ds3002/schedule/">Review the<strong>Schedule</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/">Review the<strong>Schedule</strong></a></li>
           <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
           <li><a href="">Discussions on <strong>Discord</strong></a></li>
         </ul>
@@ -29,6 +29,7 @@
 <section>
 
 <h2><a id="description" class="anchor" href="#description" name="description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Description</h2>
+<p>By definition, "data science" must make meaning of ever-growing pools of data. However the hand examination of any data, while useful for granular analysis, is never adequate for large samples. To produce data science at scale, researchers must make effective use of workflows, pipelines, and processes to ingest, parse, and transform data with automated tools.</p>
 <p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction such as SQLite and evolve to cloud base systems such as AWS or Google Cloud. This progression will include topics such as data lakes and other non-SQL applications as appropriate.</p>
 
 <ul>
@@ -49,7 +50,7 @@
   Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 11:00am-12:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
   <p>No formal Office hours will be held weekly. Instead, drop your question in the <b>#office-hours</b> channel in Discord or DM a TA or Instructor to set up a time to chat.</p>
 
-  <p><a href="schedule/" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
+  <p><a href="" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
 </div>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
@@ -73,7 +74,7 @@
   <tbody>
     <tr>
       <td><a href="" target="_new">Student Survey</a></td>
-      <td>1%</td>
+      <td></td>
       <td>First week of class</td>
     </tr>
     <tr>
@@ -89,21 +90,21 @@
     <tr>
       <td>Discussion</td>
       <td></td>
-      <td>Every THURSDAY 2:00-3:00pm EDT</td>
+      <td>Every THURSDAY 11:00am-12:00pm EDT</td>
     </tr>
     <tr>
       <td>Programming Assignments</td>
-      <td>50%</td>
+      <td></td>
       <td>5 separate projects</td>
     </tr>
     <tr>
       <td>Mid-Term Exam</td>
-      <td>24%</td>
+      <td></td>
       <td></td>
     </tr>
     <tr>
       <td>Final Exam</td>
-      <td>25%</td>
+      <td></td>
       <td></td>
     </tr>
   </tbody>
@@ -113,7 +114,7 @@
   <li><b>Student Survey</b> - a simple questionnaire for me to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
   <li><b>Lectures / Reading / Viewing</b> - Posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
   <li><b>Labs</b> - Posted beforehand. Labs are an important way for you to interact with an actual public cloud provider. In most cases this will be Amazon Web Services. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most).
-  <li><b>Discussions</b> - Class discussions are the only synchronous element of this course, and will be held weekly on Thursdays at 2pm Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Twitch streams.
+  <li><b>Discussions</b> - Class discussions are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Twitch streams.
   <li><b>Programming Assignments</b> - Programming assignments are graded mini-projects that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
   <li><b>Mid-term / Final Exams</b> - Exams will be given to track your understanding and retention of course material. They will be posted in Collab one week before due, but you will only be allowed 2 hours to complete once you begin.
 </ul>
