--- a/aws/index.html
+++ b/aws/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CS4740 Cloud Computing - AWS</title>
+    <title>DS3002 Data Science Systems - AWS</title>
 
     <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/styles.css">
     <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/github-light.css">
@@ -16,15 +16,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/cs4740/" style="color:black;text-decoration:none;">CS4740 Cloud Computing</a></h1>
-        <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Fall 2020</p>
+        <h1><a href="https://nmagee.github.io/ds3002/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
+        <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
 
         <div style="min-height:2rem;"></div>
 
         <ul>
-          <li><a href="https://nmagee.github.io/cs4740/">Return to the<strong>Syllabus</strong></a></li>
-          <li><a href="https://l.uvarc.io/youtube-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="https://l.uvarc.io/discord">Discussions on <strong>Discord</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/">Return to the<strong>Syllabus</strong></a></li>
+          <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
+          <li><a href="">Discussions on <strong>Discord</strong></a></li>
         </ul>
       </header>
       <section>
