--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section>
 
 <h2><a id="description" class="anchor" href="#description" name="description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Description</h2>
-<p>By definition, "data science" must make meaning of ever-growing pools of data. However the hand examination of any data, while useful for granular analysis, is never adequate for large samples. To produce data science at scale, researchers must make effective use of workflows, pipelines, and processes to ingest, parse, and transform data with automated tools.</p>
+<p>By definition, "data science" must make meaning out of ever-growing pools of data. But the researcher quickly discovers that the hand examination of any data, while useful for granular analysis, is never adequate for large samples. To produce data science at scale, researchers must make effective use of workflows, pipelines, and processes to ingest, parse, and transform data with tools and automation.</p>
 <p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction such as SQLite and evolve to cloud base systems such as AWS or Google Cloud. This progression will include topics such as data lakes and other non-SQL applications as appropriate.</p>
 
 <ul>
