--- a/aws/index.html
+++ b/aws/index.html
@@ -33,13 +33,17 @@
 
 <p>AWS Educate is Amazon's global initiative to provide students comprehensive resources for building skills in the cloud. It is a no-cost curriculum providing access to content, training, pathways, AWS services, and the AWS Educate Job Board with employment opportunities.</p>
 
-<p>Students will be using their own AWS account for hands-on work in this course. It is very likely that you do not yet have an AWS account, so you have two options:</p>
+<p>Students will be using their own AWS account for hands-on work in this course. It is very likely that you do not yet have an AWS account, so please follow the instructions below:</p>
 
-<p><img src="../images/number-1.png" align="left" alt="1" style="height:60px;width:60px;margin-right:1rem;" /><strong>Create a temporary AWS Educate Starter Account</strong> by using <a href="https://www.awseducate.com/registration?educate-reg-variantB" target="_new" style="font-weight:bold;">this link</a>. Starter Accounts require no credit card and have $100 in promotional credits. The AWS Educate Starter account offers students no-cost access to a specified, capped amount of AWS cloud resources without requiring a credit card for payment. The account provides access to most AWS Cloud services but does not allow for post-graduation portability. <a href="https://s3.amazonaws.com/awseducate-starter-account-services/AWS_Educate_Starter_Accounts_and_AWS_Services.pdf" target="_new">View the services supported with an AWS Educate Starter account</a>.</p>
+<p><img src="../images/number-1.png" align="left" alt="1" style="height:60px;width:60px;margin-right:1rem;" /><strong>Create an AWS 
+Account and use the Free Tier</strong> by <strong><a href="https://aws.amazon.com/free/?all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc" target="_new">signing up here</a></strong>. 
+If you have not used AWS before, creating a new account places you in the 1-year "free tier" for many AWS services. Using an AWS 
+account allows for the greatest amount of flexibility, access to AWS services, eligibility for AWS Free Tier in year one and a 
+larger AWS Promotional Credit amount. <strong><a href="https://aws.amazon.com/free/?all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc" target="_new">Services available in the Free Tier</a></strong>.
+</p>
 
-<br clear=all />
-<p><img src="../images/number-2.png" align="left" alt="1" style="height:60px;width:60px;margin-right:1rem;" /><strong>Create a regular AWS Account and use the Free Tier</strong> by <strong><a href="https://aws.amazon.com/free/?all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc" target="_new">signing up here</a></strong>. If you have not
-used AWS before, creating a new account places you in the 1-year "free tier" for many AWS services. Using an AWS account allows for the greatest amount of flexibility, access to AWS services, eligibility for AWS Free Tier in year one and a larger AWS Promotional Credit amount. <strong><a href="https://aws.amazon.com/free/?all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc" target="_new">Services available in the Free Tier</a></strong>. After you have created your own AWS account, go to AWS Educate and <strong><a href="https://www.awseducate.com/registration?educate-reg-variantB" target="_new">register as a student</a></strong> requesting student credits for your own standalone AWS account (instead of creating a Starter Account). Within 24 hours you will be able to retrieve a coupon code for $100 that can be credited to your account.</p>
+<p><img src="../images/number-2.png" align="left" alt="1" style="height:60px;width:60px;margin-right:1rem;" />
+<strong>Request AWS Education Credits</strong>. After you have created your own AWS account, go to AWS Educate and <strong><a href="https://www.awseducate.com/registration?educate-reg-variantB" target="_new">register as a student</a></strong> requesting student credits for your own standalone AWS account (instead of creating a Starter Account). Within 24 hours you will be able to retrieve a coupon code for $100 that can be credited to your account.</p>
 
 <p>If you already have an AWS account, simply sign up for AWS Educate as a student and request your $100 credits. They will issue you a coupon code that you can apply to your existing account.</p>
 
@@ -55,14 +59,13 @@ used AWS before, creating a new account places you in the 1-year "free tier" for
 
 <p>Students should complete this setup and be able to access the AWS Console by the end of the first week of class.</p>
 
-
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nmagee">nmagee</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="https://nmagee.github.io/cs4740/javascripts/scale.fix.js"></script>
+    <script src="https://nmagee.github.io/ds3002/javascripts/scale.fix.js"></script>
     
   </body>
 </html>
