--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
         <ul>
           <li><a href="https://nmagee.github.io/ds3002/">Review the<strong>Schedule</strong></a></li>
           <li><a href="" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="">Discussions on <strong>Discord</strong></a></li>
+          <li><a href="https://l.uvarc.io/ds3002-discord" target="_new">Discussions on <strong>Discord</strong></a></li>
         </ul>
       </header>
 
 <section>
 
 <h2><a id="description" class="anchor" href="#description" name="description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Description</h2>
+
+<div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;">
+  <h3>D R A F T</h3>
+  <p>This is currently a draft syllabus. Everything may be subject to change.</p>
+</div>
+
 <p>By definition, "data science" must make meaning out of ever-growing pools of data. But the researcher quickly discovers that the hand examination of any data, while useful for granular analysis, is never adequate for large samples. To produce data science at scale, researchers must make effective use of workflows, pipelines, and processes to ingest, parse, and transform data with tools and automation.</p>
-<p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction such as SQLite and evolve to cloud base systems such as AWS or Google Cloud. This progression will include topics such as data lakes and other non-SQL applications as appropriate.</p>
+<p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction and evolve to cloud-based infrastructure such as AWS or Google Cloud. This progression will include learning a variety of systems for data collection, orchestration, transformation, consumption, and others as appropriate.</p>
 
 <ul>
   <li><a href="#participation" style="text-decoration:none;color:black;">Participation</a></li>
@@ -44,7 +50,7 @@
 
 
 <h2><a id="participation" class="anchor" href="#participation" name="participation"  aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Participation</h2>
-<div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;box-shadow: 4px 4px 5px #ccc;">
+<div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;">
   <h3 style="font-size:120%;">Spring 2021 - This course will be held entirely online</h3>
   <p>This course is being offered <strong>ONLINE SYNCHRONOUSLY</strong>. Most lectures will be video streams to be watched whenever the student chooses.
   Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 11:00am-12:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
@@ -119,32 +125,93 @@
   <li><b>Mid-term / Final Exams</b> - Exams will be given to track your understanding and retention of course material. They will be posted in Collab one week before due, but you will only be allowed 2 hours to complete once you begin.
 </ul>
 
+<h3>Grading Scale</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Grade</th>
+      <th>Point Range</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>A+</td>
+      <td>98-100</td>
+    </tr>
+    <tr>
+      <td>A</td>
+      <td>94-97</td>
+    </tr>
+    <tr>
+      <td>A-</td>
+      <td>90-93</td>
+    </tr>
+    <tr>
+      <td>B+</td>
+      <td>87-89</td>
+    </tr>
+    <tr>
+      <td>B</td>
+      <td>84-86</td>
+    </tr>
+    <tr>
+      <td>B-</td>
+      <td>80-83</td>
+    </tr>
+    <tr>
+      <td>C+</td>
+      <td>77-79</td>
+    </tr>
+    <tr>
+      <td>C</td>
+      <td>74-76</td>
+    </tr>
+    <tr>
+      <td>C-</td>
+      <td>70-73</td>
+    </tr>
+    <tr>
+      <td>D+</td>
+      <td>67-69</td>
+    </tr>
+    <tr>
+      <td>D</td>
+      <td>64-66</td>
+    </tr>
+    <tr>
+      <td>D-</td>
+      <td>60-63</td>
+    </tr>
+    <tr>
+      <td>F</td>
+      <td>=<59< /td>
+    </tr>
+  </tbody>
+</table>
+
 <h2>
 <a id="tools" name="tools" class="anchor" href="#tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools</h2>
 <p>Students in this course will be expected to use the following pieces of software on a weekly basis:</p>
 <ul>
-  <li><strong><a href="">YouTube</a></strong> - This will be our primary platform for recorded lectures and the video portion of real-time discussions.</li>
-  <li><strong><a href="">Discord</a></strong> - Discord will serve as our hub for discussions, Q&A, and distributing extra material specific to topics or assignments. Download the software, create a Discord account, and <strong><a href="">join the class server</a></strong>.</li>
-  <li><strong><a href="https://github.com/">Git/GitHub</a></strong> - Students are expected to know how to version control their material using Git. Some programming assignments will require submission via commits pushed to GitHub. Need a <a href="https://katacoda.com/courses/git" target="_new">tutorial</a>? If you do not have a GitHub account, create one now. Also, sign up for the <b><a href="https://education.github.com/students" target="_new">GitHub Education Student Developer Pack</a></b></li>
+  <li><strong><a href="">YouTube</a></strong> - This will be our primary platform for recorded lectures and the video portion for some real-time discussions.</li>
+  <li><strong><a href="https://l.uvarc.io/ds3002-discord" target="_new">Discord</a></strong> - Discord will serve as our hub for discussions, Q&A, and distributing extra material specific to topics or assignments. Download the software, create a Discord account, and <strong><a href="">join the class server</a></strong>.</li>
+  <li><strong><a href="https://github.com/" target="_new">Git/GitHub</a></strong> - Students are expected to know how to version control their material using Git. Some programming assignments will require submission via commits pushed to GitHub. Need a <a href="https://katacoda.com/courses/git" target="_new">tutorial</a>? If you do not have a GitHub account, create one now. Also, sign up for the <b><a href="https://education.github.com/students" target="_new">GitHub Education Student Developer Pack</a></b></li>
   <li><strong><a href="https://nmagee.github.io/ds3002/aws/">Amazon Web Services</a></strong> - All students will use AWS accounts and credits for this course. Please click the link to learn more about the AWS Educate program and your options for creating an account. We will also be using the <strong>AWS <a href="https://aws.amazon.com/cli/">CLI</a> and <a href="https://aws.amazon.com/tools/">SDKs</a></strong> to interact with the AWS cloud programmatically. This will include the CLI interface and at least one SDK, preferably the <code>boto3</code> library for Python.</li>
-  <li><strong><a href="">Google Cloud Platform</a></strong> (optional) - Students also have the opportunity to work with GCP to broaden their hands-on experience. Google has donated $50 credit to each student for work in their environment.
-  <li><strong><a href="https://www.docker.com/">Docker</a></strong> - You will need the Docker CE or Docker Desktop application for some portions of this course. All students should also create an account on <a href="https://hub.docker.com/">Docker Hub</a>. Students may also have practice assignments using the <strong><a href="https://training.play-with-docker.com/" target="_new">Play With Docker</a></strong> sandbox.
-  <li><strong><a href="https://amazon.qwiklabs.com/">Qwiklabs</a></strong> - Provides hands-on labs in AWS services. Many of these are free and include detailed steps to complete practice projects of varying complexity.
+  <li><strong><a href="">Google Cloud Platform</a></strong> - Students will also work with GCP to broaden their hands-on experience. Google has donated $50 credit to each student for work in their environment.
+  <li><strong><a href="https://www.qwiklabs.com/" target="_new">Qwiklabs</a></strong> - Provides hands-on labs in AWS & GCP cloud services. Many of these are free and include detailed steps to complete practice projects of varying complexity.
   <li><strong><a href="">Terms</a></strong> - An etherpad list of terms and concepts touched on. This page will change over the course of the semester and be a good resource for exam review. Students can edit this page!</li>
 </ul>
 
 <h3>Student Action Items</h3>
 <div class="action-items" style="margin-left:4rem;">
 <p>
-  <input type="checkbox" id="aws_acc" name="aws_acc" value="y">  Create AWS account <br />
-  <input type="checkbox" id="aws_edu" name="aws_edu" value="y">  Join AWS Educate / get credits <br />
-  <input type="checkbox" id="aws_cli" name="aws_cli" value="y">  Install <code>aws-cli</code> tools <br />
-  <input type="checkbox" id="git_acc" name="git_acc" value="y">  Create free GitHub account <br />
-  <input type="checkbox" id="doc_sfw" name="doc_sfw" value="y">  Install <code>git</code> locally <br />
-  <input type="checkbox" id="dis_acc" name="dis_acc" value="y">  Create free Discord account / join server <br />
-  <input type="checkbox" id="doc_acc" name="doc_acc" value="y">  Create free Docker account <br />
-  <input type="checkbox" id="doc_sfw" name="doc_sfw" value="y">  Install <code>docker</code> locally <br />
-  <input type="checkbox" id="qwi_acc" name="qwi_acc" value="y">  Create free Qwiklabs account <br />
+  <input type="checkbox" id="aws_acc" name="aws_acc" value="y"> Create AWS account <br />
+  <input type="checkbox" id="aws_edu" name="aws_edu" value="y"> Join AWS Educate / request credits <br />
+  <input type="checkbox" id="git_acc" name="git_acc" value="y"> Create free GitHub account <br />
+  <input type="checkbox" id="doc_sfw" name="doc_sfw" value="y"> Install <code>git</code> locally <br />
+  <input type="checkbox" id="dis_acc" name="dis_acc" value="y"> Create free Discord account / join server <br />
+  <input type="checkbox" id="qwi_acc" name="qwi_acc" value="y"> Create free Qwiklabs account / requets credits <br />
 </p>
 </div>
 
